# cnc

./: README.md  bom.csv  cnc.kicad_prl  cnc.kicad_pro  cnc.kicad_sch  pyproject.toml  test.ipynb
