[tool.poetry]
name = "cnc"
version = "0.1.0"
description = ""
authors = ["leomollmann <leoscholler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.158"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"